@@ -31,9 +31,9 @@ static char THIS_FILE[] = __FILE__;
 static SCALE_INFO m_scaleInfo[] =
 {
    { -4, { 10, 10 }, { 0, 0 }, { 0, 0 }, { 0, 0 }, -1, -1, _T("1:4") },
-   { -2, { 20, 20 }, { 2, 2 }, { -2, 21 }, { 24, 12 }, 1, 1, _T("1:2") },
-   { 0, { 40, 40 }, { 3, 3 }, { -15, 42 }, { 70, 24 }, 0, 0, _T("1:1") },   // Neutral scale (1:1)
-   { 2, { 80, 80 }, { 6, 6 }, { -30, 84 }, { 140, 48 }, 0, 2, _T("2:1") }
+   { -2, { 20, 20 }, { 2, 2 }, { -2, 21 }, { 24, 13 }, 1, 1, _T("1:2") },
+   { 0, { 40, 40 }, { 3, 3 }, { -15, 42 }, { 70, 26 }, 0, 0, _T("1:1") },   // Neutral scale (1:1)
+   { 2, { 80, 80 }, { 6, 6 }, { -30, 84 }, { 140, 52 }, 0, 2, _T("2:1") }
 };
 
 
