@@ -31,7 +31,9 @@
 int F_abs(int argc, NXSL_Value **argv, NXSL_Value **ppResult);
 int F_classof(int argc, NXSL_Value **argv, NXSL_Value **ppResult);
 int F_d2x(int argc, NXSL_Value **argv, NXSL_Value **ppResult);
+int F_gmtime(int argc, NXSL_Value **argv, NXSL_Value **ppResult);
 int F_length(int argc, NXSL_Value **argv, NXSL_Value **ppResult);
+int F_localtime(int argc, NXSL_Value **argv, NXSL_Value **ppResult);
 int F_lower(int argc, NXSL_Value **argv, NXSL_Value **ppResult);
 int F_max(int argc, NXSL_Value **argv, NXSL_Value **ppResult);
 int F_min(int argc, NXSL_Value **argv, NXSL_Value **ppResult);
@@ -55,7 +57,9 @@ static NXSL_ExtFunction m_builtinFunctions[] =
    { "abs", F_abs, 1 },
    { "classof", F_classof, 1 },
 	{ "d2x", F_d2x, -1 },
+   { "gmtime", F_gmtime, 1 },
    { "length", F_length, 1 },
+   { "localtime", F_localtime, 1 },
    { "lower", F_lower, 1 },
    { "max", F_max, -1 },
    { "min", F_min, -1 },
